--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
 = Songsoftheday
 
 Downloads the songs of the day podcast archive from KEXP.
+You want to run downloadsongsoftheday.rb from the
+gem's bin directory. 
 
 == Contributing to Songsoftheday
  
